# grpo-oss-experiments

./: .gitignore  README.md  pyproject.toml
configs/: experiment_manifest.json
scripts/: generate_manifest.sh  prepare_gsm8k.py  run_gsm8k_suite.sh  run_gsm8k_tiny_debug.py  run_ifeval_suite.sh  run_suite_gpu0.sh  run_suite_gpu1.sh
src/experiments/: __init__.py  cli.py  defaults.py  formatting.py  loaders.py  manifest.py  rewards.py  runtime.py  splits.py  tasks.py  trl_recipes.py
