[project]
name = "grpo-oss-experiments"
version = "0.1.0"
description = "Experiment scaffold for prompt, SFT, best-of-n, and GRPO on OSS benchmarks."
requires-python = ">=3.12"
dependencies = [
  "accelerate>=1.0.0",
  "datasets>=2.20.0",
  "peft>=0.12.0",
  "transformers>=4.50.0",
  "trl>=0.18.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
